...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CoordinatorLayoutFitsSystemWindows">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
...
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_flag" />
                        <TextView
                            android:id="@+id/state_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/state"
                            tools:text="TODO"/>
                        <ImageButton
                            android:id="@+id/state_remove"
                            style="@style/NoteFragmentMetadataItemButton"
                            android:src="@drawable/ic_close" />
                    </LinearLayout>

...
    <!-- Top toolbar -->
    <!-- TODO: DRY -->
    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarLayoutStyle">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_toolbar"
            style="@style/TopToolbar"
            app:menu="@menu/note_actions"
            app:navigationIcon="@drawable/ic_menu" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/sync_toolbar_progress"
...
